<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="#4040"
        android:orientation="vertical"
        tools:context=".Register">
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username" android:hint="@string/enter_your_name"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/age" android:hint="@string/age"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/accNo" android:hint="@string/account_number"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4041"
            android:id="@+id/spinneraccount"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/aadhar_number"
            android:id="@+id/adhaar"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneNum" android:hint="@android:string/emptyPhoneNumber"/>
    <Button
            android:text="@string/register"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:background="#4041"
            android:layout_height="wrap_content" android:id="@+id/Register"/>
</LinearLayout>